@@ -1,3 +1,5 @@
+* Use account of write-off journal as default
+
 Version 3.0.0 - 2013-10-21
 * Bug fixes (see mercurial logs for details)
 * Use account move as cache
